[project]
name = "mcp-client"
version = "0.1.0"
description = "This project implements a client for the Model Context Protocol (MCP)."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-google-genai>=2.1.4",
    "langchain-mcp-adapters>=0.1.1",
    "langgraph>=0.4.7",
]

[dependency-groups]
dev = [
    "flake8>=7.2.0",
]
